--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -38,7 +38,7 @@
                             {% else %}
                                 <span></span>
                             {% endif %}
-                            <span style="font-weight: 400">({{ preview.rating_count }})</span>
+                            <span class="recipe-count-display">({{ preview.rating_count }})</span>
                     </div>
                     <div class="recipe-user-panel">
                         <button class="panel-icon" id="share-button-{{ preview.id }}" data-slug="{{ preview.slug }}" style="transform: scale(0.9)">
