added search functionality to list views (explore & library)

--- a/recipe_app/recipes/static/recipes/css/styles.css
+++ b/recipe_app/recipes/static/recipes/css/styles.css
@@ -228,6 +228,10 @@ main {
     .row-content {
         gap: 0.8rem;
     }
+    .section-row {
+        margin-top: 0.8rem;
+        margin-bottom: 0.8rem;
+    }
 }
 
 .tag-list-container {
@@ -235,23 +239,22 @@ main {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.4rem;
     max-width: 800px;
+    margin: 0.8rem 0;
 }
 
 .ingredient {
     border-radius: 999px;
-    padding: 0.4rem 1rem;
-    background: whitesmoke;
-    border: solid 2px whitesmoke;
-    color: black;
-    min-height: 1.5rem;
-    font-size: 1.2rem;
+    padding: 0.3rem 0.7rem;
+    background: var(--element-color);
+    color: var(--icon-color);
+    font-size: 1rem;
 }
 
 .ingredient:hover {
-    color: #333;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 0px 8px 0px;
+    color: var(--accent-color);
+    cursor: pointer;
 }
 
 .recipe-pad {
@@ -595,7 +598,7 @@ main {
     align-items: center;
     justify-content: space-between;
     gap: 0.5rem;
-    padding: 0.7rem 0.9rem;
+    padding: 0.4rem 0.5rem;
     min-height: 1.5rem;
     min-width: 320px;
     max-width: 600px;
@@ -619,8 +622,8 @@ main {
 .searchbar-button {
     border-radius: 999px;
     border: none;
-    width: 2.2rem;
-    height: 2.2rem;
+    width: 2rem;
+    height: 2rem;
     background-color:indianred;
     color: white;
     display: flex;
