--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -18,6 +18,20 @@
 
 {% block main-content %}
 
+<div class="row-wrapper section-row">
+    <div class="row-content">
+        <div class="widget">
+            <form id="searchbar-form" class="searchbar" method="post">
+                {% csrf_token %}
+                <input class="searchbar-input" style="border: 0;" type="text" id="search-input" name="search-input" placeholder="Suche">
+                <button type="submit" class="searchbar-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         {% for preview in recipes %}
