--- a/recipe_app/chefs/templates/registration/login.html
+++ b/recipe_app/chefs/templates/registration/login.html
@@ -37,7 +37,7 @@
                 </button>
             </div>
 
-            <input type="hidden" name="next" value="{{ next }}">
+            <input class="registration-input" type="hidden" name="next" value="{{ next }}">
         </form>
     </div>
     <div class="row-content" style="margin-top: 0.5rem; margin-bottom: 1rem;">
