--- a/recipe_app/recipes/static/recipes/css/styles.css
+++ b/recipe_app/recipes/static/recipes/css/styles.css
@@ -842,3 +842,13 @@ textarea {
     border-radius: 8px;
     margin-bottom: 1rem;
 }
+
+.checked .shopping-text {
+    text-decoration: line-through;
+    color: var(--icon-color);
+}
+
+.shopping-checkbox {
+    cursor: pointer;
+    accent-color: var(--accent-color);
+}
