--- a/recipe_app/recipes/templates/recipes/shopping_list.html
+++ b/recipe_app/recipes/templates/recipes/shopping_list.html
@@ -21,14 +21,19 @@
     <div class="row-content">
         <div class="card">
             <div class="form-header">
-                <div style="margin-bottom: 0.4rem;"><span>Einkaufsliste für</span></div>
+                <div style="margin-bottom: 0.6rem;"><span>Einkaufsliste für</span></div>
             </div>
             <div style="width: 100%; display: flex; justify-content: center; font-size: 1.2rem; font-weight: 300;">
-                <ul>
+                <ul style="text-align: center">
                     {% for recipe in recipes %}
-                    <a href="{% url 'recipes:detail' recipe.recipe.slug %}">
-                        <li style="margin-bottom: 0.2rem;">{{ recipe.recipe.title }}</li>
-                    </a>
+                        <li style="margin-bottom: 0.4rem; display: flex; justify-content: center; align-items: flex-end; gap: 0.4rem;">
+                            <a href="{% url 'recipes:detail' recipe.recipe.slug %}">
+                                <div><span>{{ recipe.recipe.title }}</span></div>
+                            </a>
+                            <button class="panel-icon" id="remove-from-shopping-list-button-{{ recipe.id }}" style="transform: scale(0.9)" title="Aus Einkaufsliste entfernen">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>    
+                            </button>
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
@@ -108,6 +113,37 @@
             localStorage.removeItem('shoppingList');
         }
     }
+
+
+    // Remove recipe from shopping list functionality
+    function removeFromShoppingList(shoppingRecipeId) {
+        if (confirm('Sicher, dass du das Rezept aus der Einkaufsliste entfernen möchtest?')) {
+            fetch(`/recipes/remove-recipe-from-shopping-list/${shoppingRecipeId}/`)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Error in response');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('recipe removed', data);
+                    window.location.reload(); // Move reload here
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    // Optionally show an error message to the user
+                });
+        }
+    }
+    
+    document.addEventListener('DOMContentLoaded', () => {
+        document.querySelectorAll('[id^="remove-from-shopping-list-button-"]').forEach(button => {
+            button.addEventListener('click', function() {
+                removeFromShoppingList(this.id.split('-').pop())
+            })
+        })
+    })
+
 
 </script>
 
